# mixers

./: README.md  pyproject.toml
mixers/: BaseMixer16.py  BaseMixer32.py  HugeMixer14.py  LargeMixer16.py  LargeMixer32.py  MLPMixer.py  MixerBlock.py  SmallMixer16.py  SmallMixer32.py  __init__.py
mixers/jax/modules/: MLPBlock.py  MixerBlock.py  __init__.py
mixers/modules/: MLPBlock.py  MLPMixer.py  MixerBlock.py  __init__.py
mixers/pytorch/: BaseMixer16.py  BaseMixer32.py  HugeMixer14.py  LargeMixer16.py  SmallMixer16.py  SmallMixer32.py  __init__.py
mixers/pytorch/modules/: HeadModule.py  MLPMixer.py  MixerBlock.py  __init__.py
mlpmixer/: MLPBlock.py  MLPMixer.py  MixerBlock.py  __init__.py
