[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mixers"
version = "0.0.1"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "The official implementation of MLP Mixer by Tolstikhin, Houlsby, Kolesnikov, Beyer et al."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch", "einops"]
keywords = ["mlp", "mixer", "image classification"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/mixers", Repository="https://github.com/tahashieenavaz/mixers", Documentation="https://github.com/tahashieenavaz/mixers#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "figures*", "mermaid*", "scripts*"]

[tool.setuptools.package-data]
mixers = ["*.md", "*.txt", "*.png"]